Pushing changes yay

--- a/project/project.ipynb
+++ b/project/project.ipynb
@@ -11,9 +11,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This notebook follows the methodology described in our report in order to answer our research questions. We provided a NBViewer notebook link to permit to display the maps.\n",
+    "This notebook follows the methodology described in our report in order to answer our research questions. \n",
     "\n",
-    "We provide the following overview for easier navigation:"
+    "_Note:_ We provid an NBViewer Notebook link to display the maps."
    ]
   },
   {
@@ -23,19 +23,19 @@
     "### Overview:\n",
     "\n",
     "<ol start=\"0\">\n",
-    "  <li><a href=\"#t1\"><b>Data Collection &amp; Preliminary Analysis:</b></a> description of our dataset retrieval and quick analysis of our datasets to familiarize ourselves with them</li>\n",
+    "  <li><a href=\"#t1\"><b>Data Collection &amp; Preliminary Analysis:</b></a> datasets retrieval and quick analysis to familiarize ourselves with them</li>\n",
     "  <li><a href=\"#t2\"><b><i>Spinn3r</i> Data Treatment:</b></a> \n",
     "      application of our cleaning and NLP pipeline to the $1^{st}$ dataset</li>\n",
     "  <li><a href=\"#t3\"><b><i>Spinn3r</i> Dataset Description:</b></a> \n",
     "      a first (less naive) analysis of the dataset</li>\n",
     "  <li><a href=\"#t4\"><b>Dictionary Construction</b></a> (using the <b><i>Spinn3r</i></b> dataset)<b>:</b> \n",
-    "      creation (and refining) of the dictionary we are going to use on both datasets</li>\n",
+    "      creation (and refining) of the dictionary to be used on both datasets</li>\n",
     "  <li><a href=\"#t5\"><b><i>Spinn3r</i> Dataset Analysis:</b></a> \n",
-    "      first answer to our research questions using the <i>\"smaller\" <b>Spinn3r</b></i> set</li>\n",
+    "      first answer to our research questions using the <i>\"smaller\" <b>Spinn3r</b></i> dataset</li>\n",
     "  <li><a href=\"#t6\"><b><i>twitter-swisscom</i> Data Processing Pipeline:</b></a> \n",
     "      after using the <b><i>Spinn3r</i></b> set as a proof of concept, we apply the cleaning, NLP and keyword-based selection methods to our $2^{nd}$ dataset</li>\n",
     "      <li><b><a href=\"#t7\"><i>twitter-swisscom</i> Dataset Analysis:</b></a> \n",
-    "      we analyse the information given in this new dataset</li>\n",
+    "      we analyse the newly gained insights</li>\n",
     "  <li><a href=\"#t8\"><b>Conclusion</b></a></li>\n",
     "</ol>"
    ]
@@ -1205,7 +1205,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We apply our cleaning pipeline to the termes in the dictionary so that words in our dictionary can be matched to our processed tweets.\n",
+    "We apply our cleaning pipeline to the terms in the dictionary so that they can be matched with our processed tweets.\n",
     "\n",
     "_Note :_ we only show the pipeline application to the $1^{st}$ dictionary as an example. The actual cleaning (and matching of keywords) is done in the *dict_filtering.py* script and saved to a pkl file (stored in the *'data/spinn3r_tweets/keyworded_tweets'* folder)."
    ]
@@ -1237,7 +1237,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "After cleaning and tokenizing, the dictionnaries look like this:"
+    "After cleaning and tokenizing, the dictionaries look like this:"
    ]
   },
   {
@@ -1304,7 +1304,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "After stemming the words now look like this:"
+    "After stemming, the words now look like this:"
    ]
   },
   {
@@ -1356,7 +1356,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The match_dict function works on the dictionary (list of lists) and a single tweet(list), which makes it quite time consuming. However, working with this datastructure has the great benefit of finding matches of a group words, even if they are separated by a word –such as 'feeling very blue'– and dealing with words in an inverted order, which may occur due to grammatical reasons in german.\n",
+    "The match_dict function works on the dictionary (list of lists) and a single tweet (list), which makes it quite time consuming. However, working with this data structure has the great benefit of finding matches for a group of  words (e.g. _\"killing myself\"_), even if they are separated by a word –such as 'feeling very blue'– and dealing with words in an inverted order, which may occur due to grammatical reasons in german.\n",
     "\n",
     "Now that we have our dictionaries, we filter the tweets to keep the ones where keyword occurs at least once in the tweets.\n",
     "\n",
@@ -1417,11 +1417,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We decide to use a coocurence network (as opposed to coocurence matrix) to visualize the keywords that occur frequently together in tweets.\n",
-    "The reason for this is that these coocurences may be very sparse making the coocurence matrix large and sparse. The network deals better with this sparcity.\n",
-    "We arrange all words as nodes in a circular manner and draw edges, who's thickness depends on the number of cooccrences, between the words coocuring.\n",
-    "\n",
-    "The code for this visualisation follows bellow."
+    "We decide to use a coocurrence graph (as opposed to coocurrence matrix) to visualize the keywords that occur frequently together in tweets as the matrix is very large and sparse, not allowing us to see any results, whereas the network deals better with this sparcity. To construct our graphs, we used a circular plot layout where the nodes (cooccurring words) were linked between them if they were present in the same tweet (the number of cooccurrences being represented by the edge's width)."
    ]
   },
   {
@@ -1468,7 +1464,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We now look at what kind of results the filtering provides:"
+    "We now look at what kind of results our filtering provides:"
    ]
   },
   {
@@ -1497,7 +1493,7 @@
     "\n",
     "Even though some tweets indeed show signs of mental health issues, some are completely unrelated to mental health. This discussion will be explicited in the Dictionary Evaluation (Parts _3.4_ and _3.5_).\n",
     "\n",
-    "The fact that despite the few matches we get false positives indicates that the total number of true matching tweets is even smaller."
+    "Despite the few matches, we get false positives which indicates that the total number of tweets actually showing signs of mental distress is even smaller."
    ]
   },
   {
@@ -1556,7 +1552,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We notice that there are 3 times less matching tweets than in English, which can partially be explained by the fact that the ratio of matching tweets is not the same in both languages. Looking at the percentage of matching tweets we see that only $0.09\\%$ of all french tweets contain at least one match."
+    "We notice that there are 3 times less matching tweets than in English, which can partially be explained by the fact that the ratio of matching tweets is not the same in both languages. Looking at the percentage of matching tweets we see that only $0.09\\%$ of all French tweets contain at least one match."
    ]
   },
   {
@@ -1647,7 +1643,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "German also shows the connection betweet suicide and depression, just like french and english."
+    "German also shows a connection between suicide and depression, just like French and English."
    ]
   },
   {
@@ -1796,7 +1792,7 @@
    "outputs": [],
    "source": [
     "df = pkl.load(open(SP_DE_KW, \"rb\" ))\n",
-    "german_filtered = get_keyword_stats(df)\n",
+    "german_filtered = \n",
     "german_filtered[['main', 'keywords']].head()"
    ]
   },
@@ -1861,9 +1857,7 @@
     "#### 3.4.0. Helper functions\n",
     "\n",
     "\n",
-    "We define the following helper functions:\n",
-    "\n",
-    "#please explain what they do!!"
+    "We define the following helper functions:"
    ]
   },
   {
@@ -1874,6 +1868,7 @@
    "source": [
     "def tweet_search(df, word):\n",
     "    \"\"\"\n",
+    "    This retrieves all tweets of a DataFrame 'df' mentioning a word 'word'\n",
     "    \"\"\"\n",
     "    return df[df['main'].map(lambda x: word in x)]['main']"
    ]
@@ -1886,6 +1881,7 @@
    "source": [
     "def md_search(df, word, col):\n",
     "    \"\"\"\n",
+    "    This functions shows the relative appearance of words in our dictionary to show that they should be taken out.\n",
     "    \"\"\"\n",
     "    md_count = df[df[col].map(lambda x: word in x) & df['mental'] == 1][col].count()\n",
     "    print(\"Tweets showing mental distress and containing the word '\" + word + \"': \" , md_count)\n",
@@ -1902,7 +1898,7 @@
    "source": [
     "def blacklisted_search(df, word):\n",
     "    \"\"\"\n",
-    "    \n",
+    "    This function shows the total appearance of words to show why they should be blacklisted.\n",
     "    \"\"\"\n",
     "    count = df[df['split'].map(lambda x: word in x)]['split'].count()\n",
     "    print(\"Total appearance of '\" + word + \"': \", count)"
@@ -2275,7 +2271,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "final_df[has_keyword].main.head(10)"
+    "keyword_tweets = get_keyword_stats(final_df)\n",
+    "keyword_tweets[['main', 'keywords']].head(10)"
    ]
   },
   {
@@ -2425,7 +2422,24 @@
    "outputs": [],
    "source": [
     "user_posts = final_df[has_keyword].author_user_id.value_counts()\n",
-    "user_posts.index"
+    "user_posts.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print('Percentage of users with at least one tweet containg a keyword: ', user_posts.count() / final_df.author_user_id.value_counts().count())\n",
+    "print('Total users ',  user_posts.count())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We can see that out of all users in the dataset, almost 5 percent had at least one tweet containing one of our keywords."
    ]
   },
   {
@@ -2808,13 +2822,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "As we can see, mental health related tweets, even extended to tweets expressing general mental distress are very sparse with the use of our method. Thus, it is not possible to do similar studies as there were done in the USA for Switzerland.\n",
+    "As we can see, tweets showing mental distress are very sparse. For this reason, it very hard to get all the information we need to answer our research questions (for example determining seasonal or temporal patterns). Thus, it is not possible to conduct studies in Swizerland of the same scope of those presented in American papers, which is why we consider our results to offer more of a qualitative approach rather than purely quantitative results.\n",
     "\n",
-    "We can also see that we do not see a seasonal pattern and, while a gendered pattern appears, it is hard to quantify it’s statistical relevance due to the large amount of missing data. Indeed, there is alot of prfile where the gender of the user was not given. There re also no regional patterns that could be observed, although we note a strong concentration in the cities of Geneva and Zürich, but this may be due to there being the highest concentration of tweets in general. Overall, we see a strong concentration of tweets in cities, with soe more touristy areas, which also mean that this iswhere we will find most of our relevant tweets.\n",
+    "We find that almost $5\\%$ of users tweet about mental distress. However, their discussions only represent $\\sim0.4\\%$ of the dataset, corresponding to a total of $7152$ tweets. We were not able to see clear linguistic patterns in these tweets because of our handicap using NLP methods which were not appropriate for our research. However, we noticed some convergence in the keywords distribution and their cooccurrences between French and English MD tweets.\n",
     "\n",
-    "It is also to note that we have found a large cooccurence between certain words, which could ease any future analysis using our method. We also found out that sentiment scores do correlate with mental distress tweets.\n",
+    "Unfortunately, we cannot draw any further conclusions due to the overall sparsity of the data. We cannot analyze the gender difference – they are too similar to get any statistically relevant results – or the spatio-temporal information – the time distribution is skewed and the location data only shows significant Twitter activity in 3 municipalities (i.e. \\textit{Geneva}, \\textit{Lausanne} and \\textit{Zurich}). \n",
     "\n",
-    "To conclude, it is possible to use dictionnaries to find mental distress in tweets and to analyse patterns in them, but there is a need to have a lot more data, and a place like Switzerland might be too small, even more so considering the fact that htere are four official languages, and thus a need to have several different specialised dictionnaries for each language, as simply translating an existing dictionnary doesn't work well enough because of different expressions."
+    "When trying to compare our results to national census data, we found that these numbers were also too sparse and approximative. This further shows the need for real research on mental health related issues in Switzerland and for the conversation to get going.\n",
+    "\n",
+    "To conclude, it is possible to use dictionaries to study the expression of mental distress in tweets and to analyze their patterns. However, the sparsity of the data in Switzerland prevents us from performing a large scale research, not offering the possibility of drawing any statistically relevant conclusions. This issue can only be addressed by developing new NLP methods which can be applied to other languages than English (namely French, German and Italian) and by defining an original methodology which takes into account Switzerland’s special situation. "
    ]
   }
  ],
