Have fun and be kind 😇

--- a/project/project.ipynb
+++ b/project/project.ipynb
@@ -13,7 +13,7 @@
    "source": [
     "This notebook follows the methodology described in our report in order to answer our research questions. \n",
     "\n",
-    "_Note:_ We provid an NBViewer Notebook link to display the maps."
+    "_Note:_ We provid an [NBViewer Notebook link](http://nbviewer.jupyter.org/github/othmanbck/ada/blob/master/project/project.ipynb) to display the maps."
    ]
   },
   {
